Remove "contents" title txt, fix spacing to compensate

--- a/src/Components/Blog/Detail/TableOfContents/index.scss
+++ b/src/Components/Blog/Detail/TableOfContents/index.scss
@@ -13,7 +13,7 @@
 
 
 #BlogDetail #TableOfContents {
-  padding: 5em 1em 0 1em;
+  padding: 7em 2em 0 2em;
 
   width: 15em;
 
@@ -29,7 +29,7 @@
 /* Links container, generated by Scrollspy */
 #BlogDetail #TableOfContents ul {
   margin-top: 0;
-  padding-left: 1.5em;
+  padding-left: 0;
 }
 
 /* Apply to all ToC links, select a instead of each .hh1, .hh2, etc */
